# FT_36_7

./: CMakeLists.txt  README.md
sources/: CLogger.cpp  CLogger.h  TCPClient.cpp  TCPClient.h  clientmainwindow.cpp  clientmainwindow.h  clientmainwindow.ui  loginform.cpp  loginform.h  loginform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  netcommon.h  registrationform.cpp  registrationform.h  registrationform.ui  startscreen.cpp  startscreen.h  startscreen.ui  utils.cpp  utils.h
